// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named APPLICATION_ID 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Server variable names are reserved: APPLICATION_ID",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_API_KEY 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Server variable names are reserved: TWENTY_API_KEY",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_API_URL 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Server variable names are reserved: TWENTY_API_URL",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_APP_ACCESS_TOKEN 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Server variable names are reserved: TWENTY_APP_ACCESS_TOKEN",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_APP_APPLICATION_ACCESS_TOKEN 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Server variable names are reserved: TWENTY_APP_APPLICATION_ACCESS_TOKEN",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring a server variable named TWENTY_FUNCTIONS_URL 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "subCode": "INVALID_INPUT",
    "userFriendlyMessage": "Invalid input provided.",
  },
  "message": "Server variable names are reserved: TWENTY_FUNCTIONS_URL",
  "name": "UserInputError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named APPLICATION_ID 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "applicationVariable": [
        {
          "errors": [
            {
              "code": "INVALID_APPLICATION_VARIABLE_INPUT",
              "message": "Application variable key APPLICATION_ID is reserved",
              "userFriendlyMessage": "Application variable key APPLICATION_ID is reserved",
            },
          ],
          "flatEntityMinimalInformation": {
            "key": "APPLICATION_ID",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "applicationVariable",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 applicationVariable",
    "summary": {
      "applicationVariable": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Application variable key APPLICATION_ID is reserved",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_API_KEY 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "applicationVariable": [
        {
          "errors": [
            {
              "code": "INVALID_APPLICATION_VARIABLE_INPUT",
              "message": "Application variable key TWENTY_API_KEY is reserved",
              "userFriendlyMessage": "Application variable key TWENTY_API_KEY is reserved",
            },
          ],
          "flatEntityMinimalInformation": {
            "key": "TWENTY_API_KEY",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "applicationVariable",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 applicationVariable",
    "summary": {
      "applicationVariable": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Application variable key TWENTY_API_KEY is reserved",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_API_URL 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "applicationVariable": [
        {
          "errors": [
            {
              "code": "INVALID_APPLICATION_VARIABLE_INPUT",
              "message": "Application variable key TWENTY_API_URL is reserved",
              "userFriendlyMessage": "Application variable key TWENTY_API_URL is reserved",
            },
          ],
          "flatEntityMinimalInformation": {
            "key": "TWENTY_API_URL",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "applicationVariable",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 applicationVariable",
    "summary": {
      "applicationVariable": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Application variable key TWENTY_API_URL is reserved",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_APP_ACCESS_TOKEN 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "applicationVariable": [
        {
          "errors": [
            {
              "code": "INVALID_APPLICATION_VARIABLE_INPUT",
              "message": "Application variable key TWENTY_APP_ACCESS_TOKEN is reserved",
              "userFriendlyMessage": "Application variable key TWENTY_APP_ACCESS_TOKEN is reserved",
            },
          ],
          "flatEntityMinimalInformation": {
            "key": "TWENTY_APP_ACCESS_TOKEN",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "applicationVariable",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 applicationVariable",
    "summary": {
      "applicationVariable": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Application variable key TWENTY_APP_ACCESS_TOKEN is reserved",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_APP_APPLICATION_ACCESS_TOKEN 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "applicationVariable": [
        {
          "errors": [
            {
              "code": "INVALID_APPLICATION_VARIABLE_INPUT",
              "message": "Application variable key TWENTY_APP_APPLICATION_ACCESS_TOKEN is reserved",
              "userFriendlyMessage": "Application variable key TWENTY_APP_APPLICATION_ACCESS_TOKEN is reserved",
            },
          ],
          "flatEntityMinimalInformation": {
            "key": "TWENTY_APP_APPLICATION_ACCESS_TOKEN",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "applicationVariable",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 applicationVariable",
    "summary": {
      "applicationVariable": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Application variable key TWENTY_APP_APPLICATION_ACCESS_TOKEN is reserved",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Sync application should fail on reserved variable names should refuse a manifest declaring an application variable named TWENTY_FUNCTIONS_URL 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "applicationVariable": [
        {
          "errors": [
            {
              "code": "INVALID_APPLICATION_VARIABLE_INPUT",
              "message": "Application variable key TWENTY_FUNCTIONS_URL is reserved",
              "userFriendlyMessage": "Application variable key TWENTY_FUNCTIONS_URL is reserved",
            },
          ],
          "flatEntityMinimalInformation": {
            "key": "TWENTY_FUNCTIONS_URL",
            "universalIdentifier": Any<String>,
          },
          "metadataName": "applicationVariable",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 applicationVariable",
    "summary": {
      "applicationVariable": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Application variable key TWENTY_FUNCTIONS_URL is reserved",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
